*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.11 ===
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.

=== 1.0.10 ===
* Updated module versions in dependencies.

=== 1.0.9 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.8 ===
* Added Clang build for the CI.

=== 1.0.7 ===
* Updated build scripts.

=== 1.0.6 ===
* Updated build scripts.

=== 1.0.5 ===
* Updated interface to conform lsp-r3d-iface.
* Updated build scripts.

=== 1.0.4 ===
* Updated build scripts.

=== 1.0.3 ===
* Added support of modern C++ including C++ 11.
* Updated build scripts.

=== 1.0.2 ===
* Updated build scripts.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* GLX backend now provides the version of used R3D interface.

=== 0.5.4 ===
* Updated build system.

=== 0.5.3 ===
* Updated implementation according to the latest interface changes.

=== 0.5.2 ===
* Updated build scripts that now use tags without prefixes first.
* Updated headers and license files to match LGPL3+ license.
* Updated make files to produce static library, pkgconf file and source tree.

=== 0.5.1 ===
* Build update.

=== 0.5.0 ===
* Initial release.
